--- a/configs/seg/stage1_da3b_coco640.yaml
+++ b/configs/seg/stage1_da3b_coco640.yaml
@@ -10,23 +10,8 @@ trainer:
   precision: 16-mixed
 
 model:
-  img_size: [640, 640]
-  num_classes: 133
-  stuff_classes: []
-  attn_mask_annealing_enabled: true
-  num_masked_layers: 4
-  lr: 0.0002
-  llrd: 0.8
-  weight_decay: 0.05
-  warmup_steps: [500, 1000]
-  poly_power: 0.9
-  network:
-    class_path: depth_anything_3.model.da3.DepthAnything3Net
+  network_config:
     net:
-      __object__:
-        path: depth_anything_3.model.dinov2.dinov2
-        name: DinoV2
-        args: as_params
       name: vitb
       out_layers: [5, 7, 9, 11]
       alt_start: 4
@@ -37,19 +22,25 @@ model:
         enable: true
         num_bottleneck_tokens: 16
         num_queries: 100
-        num_masked_layers: ${model.num_masked_layers}
+        num_masked_layers: 4
         layer_start: 6
         dropout: 0.0
         attn_dropout: 0.0
     head:
-      __object__:
-        path: depth_anything_3.model.dualdpt
-        name: DualDPT
-        args: as_params
       dim_in: 1536
       output_dim: 2
       features: 128
       out_channels: [96, 192, 384, 768]
+  img_size: [640, 640]
+  num_classes: 133
+  stuff_classes: []
+  attn_mask_annealing_enabled: true
+  num_masked_layers: 4
+  lr: 0.0002
+  llrd: 0.8
+  weight_decay: 0.05
+  warmup_steps: [500, 1000]
+  poly_power: 0.9
 
 data:
   root: /home/jovyan/ybai_ws/dataset/dataset/coco
