--- a/configs/da3_eomt_tslora/stage1_base.yaml
+++ b/configs/da3_eomt_tslora/stage1_base.yaml
@@ -14,6 +14,7 @@ trainer:
 
 model:
   builder: depth_anything_3.model.da3_eomt_tslora:build_da3_eomt_network_from_config
+  da3_pretrained_path: ""
   num_seg_queries: 128
   l_split: 12
   enable_tslora: true
