--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "moviepy",
     "plyfile",
     "pillow_heif",
-    "safetensors",
+    "safetensors>=0.4.0",
     "uvicorn",
     "moviepy==1.0.3",
     "typer>=0.9.0",
