Document resume command for stage1 training

--- a/configs/seg/stage1_da3b_coco640.yaml
+++ b/configs/seg/stage1_da3b_coco640.yaml
@@ -1,3 +1,6 @@
+# Optional checkpoint path for resuming training
+ckpt_path: null
+
 trainer:
   logger:
     class_path: lightning.pytorch.loggers.WandbLogger
