--- a/configs/seg/stage1_da3b_coco640.yaml
+++ b/configs/seg/stage1_da3b_coco640.yaml
@@ -13,7 +13,9 @@ trainer:
   accelerator: gpu
   strategy: ddp_find_unused_parameters_true
   precision: 16-mixed
-  max_epochs: 5
+  check_val_every_n_epoch: 1
+  limit_val_batches: 1.0
+  max_epochs: 3
   # 🔧 添加callbacks配置
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
@@ -31,15 +33,15 @@ trainer:
         logging_interval: step
     - class_path: lightning.pytorch.callbacks.ModelSummary
       init_args:
-        max_depth: 3
+        max_depth: 2
 
 model:
   da3_pretrained_path: "/cache/model/da3/"
   network_config:
     enable_dino_teacher: true
     dino_teacher_ckpt: "/cache/model/dinov3/dinov3_vitb16_pretrain.pth"
-    gram_layers: [5, 7, 9, 11]
-    lambda_gram: 1.0
+    gram_layers: [5, 6, 7, 8, 9, 10, 11]
+    lambda_gram: 0.1
     dino_d_base: 384
     net:
       name: vitb
@@ -57,7 +59,7 @@ model:
         dropout: 0.0
         attn_dropout: 0.0
         enable_dino_teacher: true
-        distill_layers: [5, 7, 9, 11]
+        distill_layers: [5, 6, 7, 8, 9, 10, 11]
         dino_d_base: 384
         dino_teacher_dim: 768
         dino_seg_dim: 768
